# src/dtos/events/UpdateEventFieldResponseDto.ts
@@ -1,0 +1,5 @@
+export class UpdateEventFieldResponseDto {
+    eventRegistrationId?: number;  
+    eventFieldId?: number;         
+    value?: string;                
+}
