# src/repository/event/eventFielResponseRepository.ts
@@ -1,7 +1,7 @@
 import prisma from "../../prisma/client";
 import { EventFieldResponse } from "@prisma/client";
 import { CreateEventFieldResponseDto } from "../../dtos/events/CreateEventFieldResponseResquestDTO";
-//import { UpdateEventFieldResponseDto } from "../dtos/eventFieldResponse/UpdateEventFieldResponseDto";
+import { UpdateEventFieldResponseDto } from "../../dtos/events/UpdateEventFieldResponseDto";
 
 export class EventFieldResponseRepository {
 
@@ -19,12 +19,12 @@ export class EventFieldResponseRepository {
         return await prisma.eventFieldResponse.findMany();
     }
 
-//    async update(id: string, data: Partial<UpdateEventFieldResponseDto>): Promise<EventFieldResponse> {
-//        return await prisma.eventFieldResponse.update({
-//            where: { id: Number(id) },
-//            data,
-//        });
-//    }
+    async update(id: string, data: Partial<UpdateEventFieldResponseDto>): Promise<EventFieldResponse> {
+        return await prisma.eventFieldResponse.update({
+            where: { id: Number(id) },
+            data,
+        });
+    }
 //
 //    async delete(id: string): Promise<void> {
 //        await prisma.eventFieldResponse.delete({
