# src/routes/routes.ts
@@ -99,6 +99,11 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Partial_CreateEventFieldResponseDto_": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"eventRegistrationId":{"dataType":"double"},"eventFieldId":{"dataType":"double"},"value":{"dataType":"string"}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "EventResponseDto": {
         "dataType": "refObject",
         "properties": {
@@ -375,6 +380,37 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'getAllEventFieldResponses',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 200,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsEventFieldResponseController_updateEventFieldResponse: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"string"},
+                body: {"in":"body","name":"body","required":true,"ref":"Partial_CreateEventFieldResponseDto_"},
+        };
+        app.put('/eventFieldResponses/:id',
+            ...(fetchMiddlewares<RequestHandler>(EventFieldResponseController)),
+            ...(fetchMiddlewares<RequestHandler>(EventFieldResponseController.prototype.updateEventFieldResponse)),
+
+            async function EventFieldResponseController_updateEventFieldResponse(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsEventFieldResponseController_updateEventFieldResponse, request, response });
+
+                const controller = new EventFieldResponseController();
+
+              await templateService.apiHandler({
+                methodName: 'updateEventFieldResponse',
                 controller,
                 response,
                 next,
